package persistence;

import model.Event;
import model.EventLog;
import org.json.JSONObject;
import model.File;

import java.io.FileNotFoundException;
import java.io.PrintWriter;

// Represents a writer that writes JSON representation of a file object to file
public class JsonWriter {
    private static final int TAB = 4;
    private PrintWriter writer;
    private String destination;

    /**
     * @EFFECTS: constructs writer to write to destination file
     */
    public JsonWriter(String destination) {
        this.destination = destination;
    }

    /**
     * @MODIFIES: this
     * @EFFECTS: opens writer; throws FileNotFoundException if destination file cannot be opened for writing
     */
    public void open() throws FileNotFoundException {
        writer = new PrintWriter(destination);
    }

    /**
     * @MODIFIES: this
     * @EFFECTS: writes JSON representation of file object to file
     */
    public void write(File f, String masterPassword) {
        f.setMasterPassword(masterPassword);
        JSONObject json = f.toJson();
        saveToFile(json.toString(TAB));
        EventLog.getInstance().logEvent(new Event("Saved entries to workroom.json."));
    }

    /**
     * @MODIFIES: this
     * @EFFECTS: closes writer
     */
    public void close() {
        writer.close();
    }

    /**
     * @MODIFIES: this
     * @EFFECTS: writes string to file
     */
    private void saveToFile(String json) {
        writer.print(json);
    }
}
