package ui;

import java.io.IOException;

// Represents the main class which instantiates and runs the GUI
public class Main {

    public static void main(String[] args) throws IOException {
//        PasswordManager pm = new PasswordManager();
//        pm.start();
        GUI gui = new GUI();
    }

}
